<resources>
    <string name="app_name">SDDS Sandbox</string>
    <string name="app_name_title">SDDS\nSandbox</string>
    <string name="compose">Compose</string>
    <string name="view_system">XML</string>
    <string name="sandbox_text_editor_title" formatted="true">Введите значение %1$s</string>
    <string name="sandbox_text_editor_placeholder" formatted="true">Введите значение</string>
    <string name="sandbox_choice_editor_title" formatted="true">Выберите значение %1$s</string>
    <string name="sandbox_clear_focus">Убрать фокус</string>
    <string name="sandbox_enable_focus_selector">Cелектор фокуса</string>
    <string name="sandbox_editor_confirm">Подтвердить</string>
    <string name="sandbox_properties_header_name">Параметр</string>
    <string name="sandbox_properties_header_value">Значение</string>
    <string name="menu_avatar">Avatar</string>
    <string name="menu_avatargroup">AvatarGroup</string>
    <string name="menu_basicButton">BasicButton</string>
    <string name="menu_badge">Badge</string>
    <string name="menu_iconButton">IconButton</string>
    <string name="menu_linkButton">LinkButton</string>
    <string name="menu_indicator">Indicator</string>
    <string name="menu_iconBadge">IconBadge</string>
    <string name="menu_cell">Cell</string>
    <string name="menu_checkbox">CheckBox</string>
    <string name="menu_checkbox_group">CheckBoxGroup</string>
    <string name="menu_chip">Chip</string>
    <string name="menu_chip_group">ChipGroup</string>
    <string name="menu_counter">Counter</string>
    <string name="menu_radiobox">RadioBox</string>
    <string name="menu_radiobox_group">RadioBoxGroup</string>
    <string name="menu_progressbar">ProgressBar</string>
    <string name="menu_segment">Segment</string>
    <string name="menu_segment_item">SegmentItem</string>
    <string name="menu_scrollBar">ScrollBar</string>
    <string name="menu_switch">Switch</string>
    <string name="menu_spinner">Spinner</string>
    <string name="menu_textfield">TextField</string>
    <string name="menu_textarea">TextArea</string>
    <string name="sandbox_editor_title">Параметр: %1$s</string>
    <string name="sandbox_editor_placeholder">Введите значение…</string>
    <string name="sandbox_editor_confirm_title">Подтвердить</string>
    <string name="main_screen">To main screen</string>
    <string name="update_downloading">Загружаем обновление…</string>
    <string name="sandbox_new_verstion_title">v%1$s</string>
    <string name="sandbox_current_verstion_title">v%1$s</string>
    <string name="sandbox_update_button_text">Обновить</string>
    <string name="sandbox_update_notification_title">Доступно обновление</string>
    <string name="sandbox_update_failed_notification_title">Произошла ошибка обновления</string>
</resources>
