<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sandbox_graph"
    app:startDestination="@id/nav_avatar">

    <fragment
        android:id="@+id/nav_avatar"
        android:name="com.sdds.playground.sandbox.avatar.vs.AvatarFragment"
        android:label="@string/menu_avatar"
        tools:layout="@layout/fragment_component_scaffold" />

    <fragment
        android:id="@+id/nav_avatargroup"
        android:name="com.sdds.playground.sandbox.avatar.vs.AvatarGroupFragment"
        android:label="@string/menu_avatargroup"
        tools:layout="@layout/fragment_component_scaffold" />

    <fragment
        android:id="@+id/nav_basic_button"
        android:name="com.sdds.playground.sandbox.buttons.vs.BasicButtonFragment"
        android:label="@string/menu_basicButton"
        tools:layout="@layout/fragment_component_scaffold" />

    <fragment
        android:id="@+id/nav_icon_button"
        android:name="com.sdds.playground.sandbox.buttons.vs.IconButtonFragment"
        android:label="@string/menu_iconButton"
        tools:layout="@layout/fragment_component_scaffold" />

    <fragment
        android:id="@+id/nav_link_button"
        android:name="com.sdds.playground.sandbox.buttons.vs.LinkButtonFragment"
        android:label="@string/menu_linkButton"
        tools:layout="@layout/fragment_component_scaffold" />

    <fragment
        android:id="@+id/nav_cell"
        android:name="com.sdds.playground.sandbox.cell.vs.CellFragment"
        android:label="@string/menu_cell"
        tools:layout="@layout/fragment_component_scaffold" />

    <fragment
        android:id="@+id/nav_checkbox"
        android:name="com.sdds.playground.sandbox.checkbox.vs.CheckBoxFragment"
        android:label="@string/menu_checkbox"
        tools:layout="@layout/fragment_component_scaffold" />

    <fragment
        android:id="@+id/nav_checkbox_group"
        android:name="com.sdds.playground.sandbox.checkbox.vs.group.CheckBoxGroupFragment"
        android:label="@string/menu_checkbox_group"
        tools:layout="@layout/fragment_component_scaffold" />

    <fragment
        android:id="@+id/nav_chip"
        android:name="com.sdds.playground.sandbox.chip.vs.ChipFragment"
        android:label="@string/menu_chip"
        tools:layout="@layout/fragment_component_scaffold" />

    <fragment
        android:id="@+id/nav_chip_group"
        android:name="com.sdds.playground.sandbox.chip.vs.group.ChipGroupFragment"
        android:label="@string/menu_chip_group"
        tools:layout="@layout/fragment_component_scaffold" />

    <fragment
        android:id="@+id/nav_radiobox"
        android:name="com.sdds.playground.sandbox.radiobox.vs.RadioBoxFragment"
        android:label="@string/menu_radiobox"
        tools:layout="@layout/fragment_component_scaffold" />

    <fragment
        android:id="@+id/nav_radiobox_group"
        android:name="com.sdds.playground.sandbox.radiobox.vs.group.RadioBoxGroupFragment"
        android:label="@string/menu_radiobox_group"
        tools:layout="@layout/fragment_component_scaffold" />

    <fragment
        android:id="@+id/nav_progressbar"
        android:name="com.sdds.playground.sandbox.progress.vs.ProgressBarFragment"
        android:label="@string/menu_progressbar"
        tools:layout="@layout/fragment_component_scaffold" />

    <fragment
        android:id="@+id/nav_segment"
        android:name="com.sdds.playground.sandbox.segment.vs.group.SegmentFragment"
        android:label="@string/menu_segment"
        tools:layout="@layout/fragment_component_scaffold" />

    <fragment
        android:id="@+id/nav_segment_item"
        android:name="com.sdds.playground.sandbox.segment.vs.SegmentItemFragment"
        android:label="@string/menu_segment_item"
        tools:layout="@layout/fragment_component_scaffold" />

    <fragment
        android:id="@+id/nav_switch"
        android:name="com.sdds.playground.sandbox.switcher.vs.SwitchFragment"
        android:label="@string/menu_switch"
        tools:layout="@layout/fragment_component_scaffold" />

    <fragment
        android:id="@+id/nav_textfield"
        android:name="com.sdds.playground.sandbox.textfield.vs.TextFieldFragment"
        android:label="@string/menu_textfield"
        tools:layout="@layout/fragment_component_scaffold" />

    <fragment
        android:id="@+id/nav_textarea"
        android:name="com.sdds.playground.sandbox.textfield.vs.TextAreaFragment"
        android:label="@string/menu_textarea"
        tools:layout="@layout/fragment_component_scaffold" />

</navigation>